--- a/Axios Application/index.html
+++ b/Axios Application/index.html
@@ -24,7 +24,7 @@
 		<div class="card-info">
 			<div class="card-cost">
 				<div class="card-value">{{currency.rate_float}}</div>
-				<div class="card-month">per month</div>
+				<div class="card-month">Code : {{currency.code}}</div>
 			</div>
 			<div class="card-lines">
 				<div class="card-line" style="width: 80px;"></div>
